--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Enso</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/fonts/Lato/Lato.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
