--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Enso</title>
+  <title>Ensō</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/fonts/Lato/Lato.css" />
   <link rel="stylesheet" href="/fonts/Cormorant/Cormorant.css" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/img/rings.png">
 </head>
 <body>
   <app-root></app-root>
