--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/fonts/Lato/Lato.css" />
   <link rel="stylesheet" href="/fonts/Cormorant/Cormorant.css" />
-  <link rel="icon" type="image/x-icon" href="/img/rings.png">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 </head>
 <body>
   <app-root></app-root>
